fixed bugs where top buttons in home and module doesn't wrap, added more students data

--- a/src/Kanbas/Navigation/index.css
+++ b/src/Kanbas/Navigation/index.css
@@ -63,6 +63,7 @@
     margin-bottom: 20px;
     margin-left: 0;
     margin-right: 0;
+    top: 0;
     padding: 20px;
     color: white;
     font-size: 0.9em;
